correctly invoke cypress in config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,4 +22,4 @@ jobs:
           command: yarn test
       - run:
           name: e2e tests
-          command: cypress open
+          command: yarn cypress
