--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "cypress": "cypress open"
+    "cypress": "cypress open",
+    "cy:run": "cypress run"
   },
   "devDependencies": {
     "node-sass-chokidar": "^1.3.3",
