run localhost in background

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,10 @@ jobs:
           name: Test
           command: yarn test
       - run:
+          name: Run localhost
+          command: yarn start
+          background: true
+      - run:
           name: e2e tests
-          command: yarn start && yarn cy:run
-
+          command: yarn cy:run
 
