--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,13 +15,16 @@ jobs:
           paths:
             - ./node_modules
   unit-tests:
+    docker:
+      - image: circleci/node:8
     steps:
       - run:
           name: Run unit tests
           command: yarn build-css && yarn test
   e2e-tests:
+    docker:
+      - image: cypress/base:8
     steps:
-       - run:
+      - run:
           name: e2e tests
           command: yarn cy:run
-
