--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,52 @@
+# version: 2
+# jobs:
+#   build:
+#     docker:
+#       - image: cypress/base:8
+#     steps:
+#       - checkout
+#       - restore_cache:
+#           key: dependency-cache-{{ checksum "package.json" }}
+#       - run:
+#           name: Setup Dependencies
+#           command: yarn install
+#       - run:
+#           name: Add css files to project
+#           command: yarn build-css
+#       - save_cache:
+#           key: dependency-cache-{{ checksum "package.json" }}
+#           paths:
+#             - ./node_modules
+#       - run:
+#           name: Test
+#           command: yarn test
+#       - run:
+#           name: e2e tests
+#           command: yarn cy:run
 version: 2
 jobs:
-  build:
+  Restore cache:
     docker:
-      - image: cypress/base:8
+      - image: circleci/node:8
     steps:
       - checkout
-      - restore_cache:
-          key: dependency-cache-{{ checksum "package.json" }}
-      - run:
-          name: Setup Dependencies
-          command: yarn install
-      - run:
-          name: Add css files to project
-          command: yarn build-css
-      - save_cache:
-          key: dependency-cache-{{ checksum "package.json" }}
-          paths:
-            - ./node_modules
-      - run:
-          name: Test
-          command: yarn test
-      - run:
-          name: e2e tests
-          command: yarn cy:run
-
+      - run: dependency-cache-{{ checksum "package.json" }}
+  Setup Dependencies:
+    docker:
+      - image: circleci/node:8
+    steps:
+      - checkout
+      - run: yarn install
+  #   command: yarn install
+  # run:
+  #   name: Add css files to project
+  #   command: yarn build-css
+  # save_cache:
+  #   key: dependency-cache-{{ checksum "package.json" }}
+  #   paths: ./node_modules
+  # run:
+  #   name: Test
+  #   command: yarn test
+  # run:
+  #   name: e2e tests
+  #   command: yarn cy:run
