--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,20 +23,37 @@
 #       - run:
 #           name: e2e tests
 #           command: yarn cy:run
+
+
 version: 2.1
 jobs:
-  "Restore cache":
+  build:
     docker:
       - image: circleci/node:8
     steps:
       - checkout
-      - run: dependency-cache-{{ checksum "package.json" }}
-  "Setup Dependencies":
+      - restore_cache:
+          key: dependency-cache-{{ checksum "package.json" }}
+      - run:
+          name: Setup Dependencies
+          command: yarn install
+      - run:
+          name: Add css files to project
+          command: yarn build-css
+      - save_cache:
+          key: dependency-cache-{{ checksum "package.json" }}
+          paths:
+            - ./node_modules
+  Unit tests:
     docker:
       - image: circleci/node:8
     steps:
-      - checkout
-      - run: yarn install
+      - run: yarn test
+  e2e tests:
+    docker:
+      - image: circleci/node:8
+    steps:
+      - run: yarn cy:run
   #   command: yarn install
   # run:
   #   name: Add css files to project
@@ -45,8 +62,8 @@ jobs:
   #   key: dependency-cache-{{ checksum "package.json" }}
   #   paths: ./node_modules
   # run:
-  #   name: Test
-  #   command: yarn test
+  #   name:
+  #   command:
   # run:
-  #   name: e2e tests
-  #   command: yarn cy:run
+  #   name:
+  #   command:
