--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,6 @@
 #           name: e2e tests
 #           command: yarn cy:run
 
-
 version: 2.1
 jobs:
   build:
@@ -44,6 +43,8 @@ jobs:
           key: dependency-cache-{{ checksum "package.json" }}
           paths:
             - ./node_modules
+      - run: trigger_job Unit tests
+          trigger_job e2e tests
   Unit tests:
     docker:
       - image: circleci/node:8
