--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,8 @@
 #           name: e2e tests
 #           command: yarn cy:run
 
-version: 2.1
+
+version: 2
 jobs:
   build:
     docker:
@@ -43,8 +44,6 @@ jobs:
           key: dependency-cache-{{ checksum "package.json" }}
           paths:
             - ./node_modules
-      - run: trigger_job Unit tests
-          trigger_job e2e tests
   Unit tests:
     docker:
       - image: circleci/node:8
@@ -55,6 +54,17 @@ jobs:
       - image: circleci/node:8
     steps:
       - run: yarn cy:run
+
+workflows:
+  version: 2
+  as:
+    jobs:
+      - Unit tests
+
+  arr:
+    jobs:
+      - e2e tests
+
   #   command: yarn install
   # run:
   #   name: Add css files to project
