restore valid config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,6 @@
 #           name: e2e tests
 #           command: yarn cy:run
 
-
 version: 2
 jobs:
   build:
@@ -48,7 +47,20 @@ jobs:
     docker:
       - image: circleci/node:8
     steps:
+      - restore_cache:
+          key: dependency-cache-{{ checksum "package.json" }}
+      - run:
+          name: Setup Dependencies
+          command: yarn install
+      - run:
+          name: Add css files to project
+          command: yarn build-css
+      - save_cache:
+          key: dependency-cache-{{ checksum "package.json" }}
+          paths:
+            - ./node_modules
       - run: yarn test
+
   e2e tests:
     docker:
       - image: circleci/node:8
@@ -65,7 +77,6 @@ workflows:
   arr:
     jobs:
       - e2e tests
-
   #   command: yarn install
   # run:
   #   name: Add css files to project
