--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,4 +22,4 @@ jobs:
           command: yarn test
       - run:
           name: e2e tests
-          command: yarn cy:run
+          command: cypress run
