refactor e2e job in config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,4 +27,7 @@ workflows:
   build:
     jobs:
       - build
-      - cypress/run
+      - cypress/run:
+          yarn: true
+          start: yarn start
+          wait-on: 'http://localhost:3002/'
