--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "cypress": "cypress open"
+    "cypress": "cypress open",
+    "postinstall": "node -e \"try { require('./scripts/postinstall') } catch (_) {}\""
   },
   "devDependencies": {
     "node-sass-chokidar": "^1.3.3",
