--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "js-yaml": "^3.13.1",
+    "postinstall": "^0.4.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
@@ -23,8 +24,7 @@
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "cypress": "cypress open",
-    "postinstall": "node -e \"try { require('./scripts/postinstall') } catch (_) {}\""
+    "cypress": "cypress open"
   },
   "devDependencies": {
     "node-sass-chokidar": "^1.3.3",
