add required build for e2e tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ workflows:
       - cypress/run:
           executor: cypress/base-8
           requires:
-            - cypress/install
+            - build
           record: true
           yarn: true
           wait-on: "http://localhost:3002/"
