--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
     "react-test-renderer": "^16.4.1",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "start-server-and-test": "^1.9.1",
+    "wait-on": "^3.2.0"
   },
   "scripts": {
     "start-js": "react-scripts start",
@@ -24,7 +26,9 @@
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "cypress": "cypress open"
+    "cypress": "cypress open",
+    "cy:run": "cypress run",
+    "test:ci": "start-server-and-test http://localhost:3030 cy:run"
   },
   "devDependencies": {
     "node-sass-chokidar": "^1.3.3",
